closes #9, closes #5, closes #14; display website wwith info about success/fail when authetication finished, OAuth data accessable in meshinfodata, user logout enabled

--- a/gui/python-interface/websiteFail.html
+++ b/gui/python-interface/websiteFail.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Gigamesh User Authentication.</h1>
-<p>User successfully authenticated.</p>
+<p>User authentication failed. Please check the user data or internet connection.</p>
 
 </body>
 </html>
