fixes for merge request

--- a/gui/python-interface/websiteSuccess.html
+++ b/gui/python-interface/websiteSuccess.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gigamesh User Authentication</title>
+<title>GigaMesh: User authentication succeeded.</title>
 </head>
 <body>
-
-<h1>Gigamesh User Authentication.</h1>
-<p>User successfully authenticated.</p>
 
 </body>
 </html>
