--- a/gui/python-interface/websiteFail.html
+++ b/gui/python-interface/websiteFail.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gigamesh User Authentication</title>
+<title>GigaMesh: User authentication failed.</title>
 </head>
 <body>
 
-<h1>Gigamesh User Authentication.</h1>
-<p>User authentication failed. Please check the user data or internet connection.</p>
+<h1>Please check the gigamesh logs or run it using the command line to see logs.</h1>
 
 </body>
 </html>
