add oauth flow and pyInterface flow, add doku for functions

--- a/gui/python-interface/websiteFail.html
+++ b/gui/python-interface/websiteFail.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>GigaMesh: User authentication failed.</title>
+<title>GigaMesh - User Authentication</title>
 </head>
+
 <body>
-
-<h1>Please check the gigamesh logs or run it using the command line to see logs.</h1>
-
+<h1>GigaMesh: User authentication failed.</h1>
+<p>Please check the gigamesh logs or run it using the command line to see logs.</p>
 </body>
+
 </html>
