--- a/gui/python-interface/websiteSuccess.html
+++ b/gui/python-interface/websiteSuccess.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>GigaMesh: User authentication succeeded.</title>
-</head>
-<body>
 
+<head>
+<title>GigaMesh - User Authentication</title>
+</head>
+
+<body>
+<h1>GigaMesh: User authentication succeeded.</h1>
 </body>
+
 </html>
